--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,9 @@
         <div>
             <ul class="navbar-nav mr-auto">
                 {% if not app.user %}
-                <li class="nav-item"><a class="nav-link" href="">Inscription</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Connexion</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="">Déconnexion</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
                 {% endif %}
             </ul>
         </div>
